--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -106,6 +106,19 @@
         "xstring": "cpp",
         "xtr1common": "cpp",
         "xtree": "cpp",
-        "xutility": "cpp"
+        "xutility": "cpp",
+        "__bit_reference": "cpp",
+        "__hash_table": "cpp",
+        "__locale": "cpp",
+        "__node_handle": "cpp",
+        "__split_buffer": "cpp",
+        "__threading_support": "cpp",
+        "__tree": "cpp",
+        "__verbose_abort": "cpp",
+        "complex": "cpp",
+        "cwctype": "cpp",
+        "execution": "cpp",
+        "print": "cpp",
+        "string_view": "cpp"
     }
 }
